--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://github.com/Bhumikarags/Minicart.git",
+  "homepage": " https://github.com/Bhumikarags/smallcart.git",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+     "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
